--- a/32bit-with-astropy/Dockerfile
+++ b/32bit-with-astropy/Dockerfile
@@ -3,7 +3,7 @@
 # on top of the existing astropy-32bit-test-env Docker image.
 
 FROM astropy/astropy-32bit-test-env:1.6
-MAINTAINER Thomas P. Robitaille <thomas.robitaille@gmail.com>
+LABEL authors="Thomas Robitaille <thomas.robitaille@gmail.com>, Larry Bradley <larry.bradley@gmail.com>"
 
 RUN easy_install pip
 RUN pip install astropy
