Updated docker files to 1.2

--- a/image-tests/py35-mpl212/Dockerfile
+++ b/image-tests/py35-mpl212/Dockerfile
@@ -7,11 +7,7 @@ LABEL authors="Thomas Robitaille <thomas.robitaille@gmail.com>"
 
 RUN apt-get update
 RUN apt-get install -y python3-pip python3-jinja2 cython3 libfreetype6 libpng16-16 git
+RUN apt-get install -y --no-install-recommends texlive-latex-base texlive-latex-extra texlive-fonts-recommended dvipng
 RUN pip3 install numpy==1.14.0 matplotlib==2.1.2 scipy==1.0.0
 RUN pip3 install pytest pytest-mpl pytest-astropy
 
-ENV LANG en_US.UTF-8
-ENV LC_ALL en_US.UTF-8
-ENV LC_CTYPE en_US.UTF-8
-
-ENV PYTHONIOENCODING UTF8
