Update setuptools inside docker images

--- a/image-tests/py35-mpl300/Dockerfile
+++ b/image-tests/py35-mpl300/Dockerfile
@@ -4,4 +4,5 @@
 
 FROM astropy/image-tests-py35-base:1.0
 
+RUN pip3 install setuptools pip --upgrade
 RUN pip3 install pytest pytest-mpl pytest-astropy numpy==1.15.1 matplotlib==3.0.0 scipy==1.1.0
