--- a/image-tests/py36-mpl302/Dockerfile
+++ b/image-tests/py36-mpl302/Dockerfile
@@ -4,4 +4,5 @@
 
 FROM astropy/image-tests-py36-base:1.0
 
+RUN pip3 install setuptools pip --upgrade
 RUN pip3 install pytest pytest-mpl pytest-astropy numpy==1.15.4 matplotlib==3.0.2 scipy==1.1.0
