--- a/image-tests/py35-mpl212/Dockerfile
+++ b/image-tests/py35-mpl212/Dockerfile
@@ -4,4 +4,5 @@
 
 FROM astropy/image-tests-py35-base:1.0
 
+RUN pip3 install setuptools pip --upgrade
 RUN pip3 install pytest pytest-mpl pytest-astropy numpy==1.14.0 matplotlib==2.1.2 scipy==1.0.0
